--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "inversify": "^6.0.1",
+    "reflect-metadata": "^0.1.13",
     "typescript": "^4.5.2"
   },
   "devDependencies": {
