--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,10 @@
     "allowJs": true,
     "esModuleInterop": true,
     "target": "es5",
-    "lib": ["es6"],
+    "lib": [
+      "es6",
+      "dom"
+    ],
     "sourceMap": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
