--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "nodemon",
     "build": "tsc -p .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo Error: 'no test specified' && exit 1",
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,12 +16,17 @@
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "inversify": "^6.0.1",
-    "reflect-metadata": "^0.1.13",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "reflect-metadata": "^0.1.10",
+    "typeorm": "0.2.41",
+    "mysql": "^2.14.1",
+    "class-transformer": "^0.3.1",
+    "inversify": "^5.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
-    "ts-node": "^8.5.2"
+    "ts-node": "^8.5.2",
+    "@types/node": "^8.0.29",
+    "typescript": "3.3.3333"
   }
 }
