--- a/package.json
+++ b/package.json
@@ -14,19 +14,21 @@
   "dependencies": {
     "@types/express": "^4.17.13",
     "body-parser": "^1.19.0",
+    "class-transformer": "^0.3.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "typescript": "^4.5.2",
-    "reflect-metadata": "^0.1.10",
-    "typeorm": "0.2.41",
+    "http-status-codes": "^2.1.4",
+    "inversify": "^5.0.1",
     "mysql": "^2.14.1",
-    "class-transformer": "^0.3.1",
-    "inversify": "^5.0.1"
+    "reflect-metadata": "^0.1.10",
+    "status-code-enum": "^1.0.0",
+    "typeorm": "0.2.41",
+    "typescript": "^4.5.2"
   },
   "devDependencies": {
+    "@types/node": "^8.0.29",
     "nodemon": "^2.0.15",
     "ts-node": "^8.5.2",
-    "@types/node": "^8.0.29",
     "typescript": "3.3.3333"
   }
 }
