--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "reflect-metadata": "^0.1.10",
     "status-code-enum": "^1.0.0",
     "typeorm": "0.2.41",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "TypeScript": "npm:typescript@^3.3.3333"
   },
   "devDependencies": {
     "@types/node": "^8.0.29",
     "nodemon": "^2.0.15",
-    "ts-node": "^8.5.2",
+    "ts-node": "^8.10.2",
     "typescript": "3.3.3333"
   }
 }
