--- a/package.json
+++ b/package.json
@@ -22,16 +22,17 @@
     "http-status-codes": "^2.1.4",
     "inversify": "^5.0.1",
     "mysql": "^2.14.1",
+    "ng2-search-filter": "^0.5.1",
+    "normalize-url": "^7.0.2",
     "reflect-metadata": "^0.1.10",
     "status-code-enum": "^1.0.0",
     "typeorm": "0.2.41",
-    "typescript": "^4.5.2",
     "TypeScript": "npm:typescript@^3.3.3333"
   },
   "devDependencies": {
     "@types/node": "^8.0.29",
     "nodemon": "^2.0.15",
-    "ts-node": "^8.10.2",
-    "typescript": "3.3.3333"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
