--- a/ormconfig.json
+++ b/ormconfig.json
@@ -2,11 +2,11 @@
   {
     "name": "default",
     "type": "mysql",
-    "host": "91.121.185.31",
-    "port": 3307,
+    "host": "127.0.0.1",
+    "port": 3306,
     "username": "root",
-    "password": "capacitacion",
-    "database": "capacitacion",
+    "password": "root",
+    "database": "NotesDB",
     "synchronize": false,
     "entities": ["src/entities/**/*.ts"]
   }
